WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
277425
Reported crash when sending nil for UUID of animation to remove.
https://bugs.webkit.org/show_bug.cgi?id=277425
Summary
Reported crash when sending nil for UUID of animation to remove.
Megan Gardner
Reported
2024-07-31 08:19:38 PDT
Reported crash when sending nil for UUID of animation to remove.
Attachments
Add attachment
proposed patch, testcase, etc.
Megan Gardner
Comment 1
2024-07-31 08:19:49 PDT
<
rdar://problem/132787248
>
Megan Gardner
Comment 2
2024-07-31 08:23:05 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31539
EWS
Comment 3
2024-07-31 11:51:34 PDT
Committed
281665@main
(758e1d6b9f05): <
https://commits.webkit.org/281665@main
> Reviewed commits have been landed. Closing PR #31539 and removing active labels.
EWS
Comment 4
2024-08-09 10:37:58 PDT
Committed
280938.215@safari-7619-branch
(c0e70f043882): <
https://commits.webkit.org/280938.215@safari-7619-branch
> Reviewed commits have been landed. Closing PR #1579 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug