Reported crash when sending nil for UUID of animation to remove. https://bugs.webkit.org/show_bug.cgi?id=277425 rdar://132787248

Reviewed by Wenson Hsieh.

Swift doesn't work with nil values the same way that obj-c does
so we need to ensure that the value we are passing is not nil.

* Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView removeTextAnimationForAnimationID:]):

Canonical link: https://commits.webkit.org/281665@main