Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm
@@ -11889,6 +11889,9 @@ static RetainPtr<NSItemProvider> createItemProvider(const WebKit::WebPageProxy& 
 
 - (void)removeTextAnimationForAnimationID:(NSUUID *)uuid
 {
+    if (!uuid)
+        return;
+
     if (!_page->preferences().textAnimationsEnabled())
         return;
 
